--- a/.github/workflows/llama-cpp.yml
+++ b/.github/workflows/llama-cpp.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       
-      # Step 1: Install dependencies (CURL library added here)
+      # Step 1: Install all necessary dependencies
       - name: Install dependencies
         run: |
           sudo apt-get update
@@ -39,7 +39,7 @@ jobs:
       - name: Download AI Model
         run: |
           mkdir -p ./llama.cpp/models
-          MODEL_URL="https://huggingface.co/TheBloke/TinyLlama-1.1B-Chat-v1.0-GGUF/resolve/main/tinyllama-1.1B-chat-v1.0.Q2_K.gguf"
+          MODEL_URL="https://huggingface.co/TinyLlama/TinyLlama-1.1B-Chat-v1.0/resolve/main/tinyllama-1.1b-chat-v1.0.Q4_K_M.gguf"
           wget -O ./llama.cpp/models/model.gguf "$MODEL_URL"
           
       # Step 5: Run inference with a simple prompt
