--- a/.github/workflows/llama-cpp.yml
+++ b/.github/workflows/llama-cpp.yml
@@ -3,7 +3,6 @@
 name: Run Llama.cpp Inference
 
 on:
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
       prompt:
@@ -12,7 +11,6 @@ on:
         default: 'Hi AI, who are you?'
         type: string
   
-  # Also runs on pushes to the main branch
   push:
     branches:
       - 'main'
@@ -25,34 +23,31 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       
-      # Step 1: Install all necessary dependencies
       - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential git wget cmake libcurl4-openssl-dev
 
-      # Step 2: Cache and Clone llama.cpp
       - name: Cache llama.cpp repository and build
         uses: actions/cache@v4
         id: cache-llama-cpp
         with:
           path: ./llama.cpp
-          key: ${{ runner.os }}-llama-cpp-${{ github.sha }} # Re-caches only on new commits to your repo
+          key: ${{ runner.os }}-llama-cpp-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-llama-cpp-
 
       - name: Clone and build llama.cpp
-        # This step only runs if the cache was not restored
         if: steps.cache-llama-cpp.outputs.cache-hit != 'true'
         run: |
           git clone https://github.com/ggerganov/llama.cpp.git
           cd llama.cpp
           mkdir build
           cd build
+          # This flag tells CMake to build the 'main' executable we need
           cmake .. -DLLAMA_BUILD_EXAMPLES=ON
           cmake --build . --config Release
 
-      # Step 3: Cache and Download AI Model
       - name: Define Model Properties
         id: model
         run: echo "url=https://huggingface.co/TheBloke/phi-2-GGUF/resolve/main/phi-2.Q4_K_M.gguf" >> "$GITHUB_OUTPUT"
@@ -62,18 +57,16 @@ jobs:
         id: cache-model
         with:
           path: ./llama.cpp/models/model.gguf
-          key: ${{ runner.os }}-model-${{ steps.model.outputs.url }} # Re-downloads only if URL changes
+          key: ${{ runner.os }}-model-${{ steps.model.outputs.url }}
           restore-keys: |
             ${{ runner.os }}-model-
 
       - name: Download AI Model
-        # This step only runs if the model cache was not restored
         if: steps.cache-model.outputs.cache-hit != 'true'
         run: |
           mkdir -p ./llama.cpp/models
           wget -O ./llama.cpp/models/model.gguf "${{ steps.model.outputs.url }}"
           
-      # Step 4: Run inference with the user-provided prompt
       - name: Run Inference
         run: |
           cd llama.cpp
