--- a/.github/workflows/llama-cpp-inference.yml
+++ b/.github/workflows/llama-cpp-inference.yml
@@ -24,6 +24,7 @@ jobs:
     env:
       MODEL_URL: ${{ github.event_name == 'workflow_dispatch' && inputs.model_url || 'https://huggingface.co/TheBloke/phi-2-GGUF/resolve/main/phi-2.Q4_K_M.gguf' }}
       LD_LIBRARY_PATH: /llama.cpp
+      PROMPT: ${{ github.event_name == 'workflow_dispatch' && inputs.prompt || 'Write a python function that calculates the factorial of a number.' }}
 
     steps:
       - name: Generate Model URL Hash
@@ -45,6 +46,6 @@ jobs:
         run: |
           /llama.cpp/llama-cli \
             -m ./model.gguf \
-            -p "${{ inputs.prompt }}" \
+            -p "${{ env.PROMPT }}" \
             -n 128 \
             -ngl 0
