--- a/.github/workflows/ai-review-caller.yml
+++ b/.github/workflows/ai-review-caller.yml
@@ -1,5 +1,5 @@
 # .github/workflows/ai-review-caller.yml
-# This workflow triggers the reusable code review action from the code-turtle repo.
+# This workflow triggers the reusable code review workflow within the same repository.
 
 name: Trigger AI Code Review
 
@@ -11,11 +11,17 @@ jobs:
   trigger-review:
     runs-on: ubuntu-latest
     
+    # Grant permissions for the called workflow to write a PR comment.
+    permissions:
+      pull-requests: write
+      
     steps:
       - name: Call the Reusable Review Workflow
-        uses: Richard-m-j/code-turtle/.github/workflows/reusable-review.yml@main
+        # Use a local path to call a reusable workflow in the same repository.
+        uses: ./.github/workflows/reusable-review.yml
         with:
           pr_number: ${{ github.event.pull_request.number }}
           base_sha: ${{ github.event.pull_request.base.sha }}
           head_sha: ${{ github.event.pull_request.head.sha }}
+        # 'secrets: inherit' is good practice to pass the GITHUB_TOKEN
         secrets: inherit
