--- a/.github/workflows/ai-review-caller.yml
+++ b/.github/workflows/ai-review-caller.yml
@@ -5,7 +5,7 @@ name: Trigger AI Code Review
 
 on:
   pull_request:
-    types: [opened, reopened, synchronize]
+    branches: [ main ]
 
 jobs:
   trigger-review:
